--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
 		"php": ">=5.4.0",
 		"yiisoft/yii2": "*",
 		"yiisoft/yii2-bootstrap": "*",
-		"yiisoft/yii2-swiftmailer": "*",
+		"yiisoft/yii2-swiftmailer": "dev-master",
 		"kartik-v/yii2-widgets": "dev-master",
 		"trentrichardson/jquery-timepicker-addon": "dev-master",
 		"2amigos/egmap": "dev-master"
